fix(styles): menu command with & without icons aren't aligned (#1180)
- add a `$slick-menu-icon-min-width` to align icon containers so that they are always aligned with and without icons

--- a/packages/common/src/styles/_variables-theme-material.scss
+++ b/packages/common/src/styles/_variables-theme-material.scss
@@ -69,6 +69,7 @@ $slick-column-picker-title-font-size:                       17px !default;
 $slick-menu-item-font-size:                                 14px !default;
 $slick-menu-item-height:                                    26px !default;
 $slick-menu-icon-line-height:                               18px !default;
+$slick-menu-icon-min-width:                                 18px !default;
 $slick-menu-icon-width:                                     18px !default;
 $slick-menu-title-font-size:                                17px !default;
 $slick-icon-group-width:                                    22px !default;
